--- a/templates/login.html
+++ b/templates/login.html
@@ -59,7 +59,7 @@
     
                         </form>
     
-                        <p class="mt-6 text-sm text-center text-gray-400">Don&#x27;t have an account yet? <a href="#" class="text-blue-500 focus:outline-none focus:underline hover:underline">Sign up</a>.</p>
+                        <p class="mt-6 text-sm text-center text-gray-400">Don&#x27;t have an account yet? <a href="/signup" class="text-blue-500 focus:outline-none focus:underline hover:underline">Sign up</a>.</p>
                     </div>
                 </div>
             </div>
