--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,7 +7,7 @@
     <title>Meraki UI Sign Up</title>
 
     <!-- ✅ Tailwind CSS CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="../static/dist/output.css">
   </head>
   <body class="bg-white dark:bg-gray-900">
     <div class="flex justify-center h-screen">
@@ -119,7 +119,7 @@
             <p class="mt-6 text-sm text-center text-gray-400">
               Already have an account?
               <a
-                href="login"
+                href="login.html"
                 class="text-blue-500 focus:outline-none focus:underline hover:underline"
                 >Sign in</a
               >.
